# cheshm

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE.md  README.md  cheshm.spec  hatch_build.py  pyproject.toml  run.py
.github/workflows/: wheels.yml
bindings/python/cheshm/: __init__.py  cli.py
bindings/python/src/align/: CMakeLists.txt  core.cpp
bindings/python/src/enhance/: CMakeLists.txt  core.cpp
bindings/python/src/glint/Simple/: CMakeLists.txt  core.cpp
bindings/python/src/pupil/ElSe/: CMakeLists.txt  core.cpp
bindings/python/src/pupil/ExCuSe/: CMakeLists.txt  core.cpp
bindings/python/src/pupil/PuRe/: CMakeLists.txt  core.cpp
bindings/python/src/pupil/PuReST/: CMakeLists.txt  core.cpp
bindings/python/src/pupil/PupilLabs2D/: CMakeLists.txt  core.cpp
bindings/python/src/pupil/Simple/: CMakeLists.txt  core.cpp
bindings/python/src/pupil/Starburst/: CMakeLists.txt  core.cpp
bindings/python/src/pupil/Swirski2D/: CMakeLists.txt  core.cpp
bindings/python/src/shape/: CMakeLists.txt  core.cpp
bindings/python/src/viz/: CMakeLists.txt  core.cpp
scripts/: build_c.py  manylinux-before-all.sh  regen_stubs.sh
src/align/: rigid.cpp
src/cheshm/: __init__.py  _common.py  _protocols.py  cli.py
src/cheshm/glint_detectors/Simple/: CMakeLists.txt  README.md  __init__.py  core.py
src/cheshm/glint_detectors/Simple/include/Simple/: defaults.hpp
src/cheshm/glint_detectors/Simple/src/: core.cpp
src/cheshm/limbus_detectors/daugman/: CMakeLists.txt  README.md
src/cheshm/limbus_detectors/daugman/_common/include/daugman/: contour_ops.hpp  nb_to_numpy.hpp
src/cheshm/limbus_detectors/daugman/active_contour/: CMakeLists.txt  __init__.py  core.c  core.py  defaults.h
src/cheshm/limbus_detectors/daugman/active_contour/include/active_contour/: contour.hpp  defaults.hpp
src/cheshm/limbus_detectors/daugman/active_contour/src/: contour.cpp  core.cpp  radial_search.cpp
src/cheshm/limbus_detectors/daugman/integro_differential/: CMakeLists.txt  core.c  core.py  defaults.h
src/cheshm/limbus_detectors/daugman/integro_differential/include/integro_differential/: defaults.hpp  operator.hpp
src/cheshm/limbus_detectors/daugman/integro_differential/src/: core.cpp  operator.cpp
src/cheshm/limbus_detectors/daugman/pupil_guided/: CMakeLists.txt  core.c  core.py  defaults.h
src/cheshm/limbus_detectors/daugman/pupil_guided/include/pupil_guided/: contour.hpp  defaults.hpp
src/cheshm/limbus_detectors/daugman/pupil_guided/src/: contour.cpp  core.cpp  radial_search.cpp
src/cheshm/pupil_detectors/ElSe/: CMakeLists.txt  LICENSE  README.md  core.py
src/cheshm/pupil_detectors/ElSe/include/ElSe/: defaults.hpp  else.hpp
src/cheshm/pupil_detectors/ElSe/src/: core.cpp  else.cpp
src/cheshm/pupil_detectors/ExCuSe/: CMakeLists.txt  LICENSE  README.md  core.py
src/cheshm/pupil_detectors/ExCuSe/include/ExCuSe/: defaults.hpp  excuse.hpp  label_order.hpp
src/cheshm/pupil_detectors/ExCuSe/src/: core.cpp  excuse.cpp
src/cheshm/pupil_detectors/PuRe/: CMakeLists.txt  LICENSE  README.md  __init__.py  core.py
src/cheshm/pupil_detectors/PuRe/include/PuRe/: defaults.hpp  pure.hpp
src/cheshm/pupil_detectors/PuRe/src/: core.cpp  pure.cpp
src/cheshm/pupil_detectors/PuReST/: CMakeLists.txt  __init__.py  core.py
src/cheshm/pupil_detectors/PuReST/include/PuReST/: defaults.hpp  purest.hpp
src/cheshm/pupil_detectors/PuReST/src/: core.cpp  purest.cpp
src/cheshm/pupil_detectors/PupilLabs2D/: CMakeLists.txt  LICENSE  README.md  core.py
src/cheshm/pupil_detectors/PupilLabs2D/cpp/: detect_2d.hpp
src/cheshm/pupil_detectors/PupilLabs2D/cpp/shared/include/common/: colors.h  constants.h  types.h
src/cheshm/pupil_detectors/PupilLabs2D/cpp/singleeyefitter/: EllipseDistanceApproxCalculator.h  EllipseEvaluation2D.h  detectorUtils.cpp  utils.h
src/cheshm/pupil_detectors/PupilLabs2D/cpp/singleeyefitter/ImageProcessing/: cvx.cpp  cvx.h
src/cheshm/pupil_detectors/PupilLabs2D/include/PupilLabs2D/: defaults.hpp  pupil_labs_2d.hpp
src/cheshm/pupil_detectors/PupilLabs2D/src/: core.cpp  pupil_labs_2d.cpp
src/cheshm/pupil_detectors/Simple/: CMakeLists.txt  README.md  core.py
src/cheshm/pupil_detectors/Simple/include/Simple/: defaults.hpp
src/cheshm/pupil_detectors/Simple/src/: core.cpp
src/cheshm/pupil_detectors/Starburst/: CMakeLists.txt  LICENSE  README.md  core.py
src/cheshm/pupil_detectors/Starburst/include/Starburst/: auto_seed.hpp  corneal_reflection.hpp  defaults.hpp  ransac_ellipse.hpp
src/cheshm/pupil_detectors/Starburst/src/: auto_seed.cpp  contour_detection.cpp  core.cpp  corneal_reflection.cpp  ransac_ellipse.cpp  svd.cpp
src/cheshm/pupil_detectors/Swirski2D/: CMakeLists.txt  README.md  core.py
src/cheshm/pupil_detectors/Swirski2D/include/Swirski2D/: conic_section.hpp  cvx.hpp  defaults.hpp  pupil_tracker.hpp  utils.hpp
src/cheshm/pupil_detectors/Swirski2D/src/: core.cpp  cvx.cpp  pupil_tracker.cpp  utils.cpp
src/enhance/: enhance.cpp
src/lavan/: __init__.py  _common.py  cli.py
src/lavan/boundary/: CMakeLists.txt  README.md  __init__.py  active_contour_core.c  daugman_active_contour.py  integro_differential_operator.py  integro_differential_operator_core.c  pupil_guided_contour.py  pupil_guided_contour_core.c
src/lavan/pupil_detector_2d/: CMakeLists.txt  __init__.py
src/lavan/pupil_detector_2d/detector_2d/: CMakeLists.txt
src/lavan/pupil_detectors/starburst/: CMakeLists.txt  LICENSE  README.md  __init__.py  core.py
src/lavan/pupil_detectors/starburst/include/starburst/: corneal_reflection.hpp  ransac_ellipse.hpp
src/lavan/pupil_detectors/starburst/src/: contour_detection.cpp  core.cpp  corneal_reflection.cpp  ransac_ellipse.cpp  svd.cpp
src/lavan/pupil_detectors/swirski_2d/: CMakeLists.txt  LICENSE  README.md  core.py
src/lavan/pupil_detectors/swirski_2d/include/swirski_2d/: conic_section.hpp  cvx.hpp  pupil_tracker.hpp  utils.hpp
src/lavan/pupil_detectors/swirski_2d/src/: core.cpp  cvx.cpp  pupil_tracker.cpp  utils.cpp
src/viz/: render.cpp
(+214 files in other folders)
